# kalshi_weather

./: .env.example  .gitignore  DIRECT_NOAA_MODELS_STATUS.md  FINAL_STATUS.md  INDEPENDENT_MODEL_RACE_STATUS.md  KALSHI_HISTORY_CHARTS_STATUS.md  LLM_TRADE_ADVISOR_STATUS.md  MODEL_ESTIMATE_COMPARISON_STATUS.md  OPERATIONAL_VALIDATION_STATUS.md  PAPER_MODEL_RACE_STATUS.md  PHASE2_STATUS.md  PHASE3_STATUS.md  PHASE4_STATUS.md  PHASE5_STATUS.md  PHASE6_STATUS.md  PHASE7_STATUS.md  POC_ACCEPTANCE_REPORT.md  POC_FINAL_STATUS.md  README.md  RUN_LOG.md  SAFER_MODEL_RACE_STATUS.md  SIMPLE_OUTPUT_STATUS.md  SYNTHETIC_EDGE_CASE_STATUS.md  TODO.md  pyproject.toml
config/: model_registry_current.yaml  settings.example.yaml  strategy_current.shadow.yaml
configs/: close_policy.yaml  market_lifecycle.yaml  probability_blend_defaults.yaml  station_timezones.yaml  thesis_exposure.yaml  trader_time_profiles.yaml  trader_time_profiles_lifecycle.yaml
data/: .gitkeep
docs/: 00_MASTER_SPEC.md  01_ARCHITECTURE.md  02_MODEL_AND_TRADING_ALGO.md  03_FAKE_MONEY_SIM_PLAN.md  04_DATA_SOURCES.md  05_SAFETY_AND_RISK_GUARDS.md  06_CLI_REFERENCE.md  07_LLM_TRADER_AGENT.md  08_TRADER_AGENT_SCHEMA.md  09_TRADER_AGENT_RUNBOOK.md  10_CANONICAL_OUTPUT_PATHS.md  99_SOURCE_NOTES.md  HOW_TO_READ_RESULTS.md  KALSHI_HISTORY_AND_CHARTS.md  LLM_TRADE_ADVISOR.md  MODEL_ESTIMATE_COMPARISON.md  OLLAMA_GPT_OSS_LLM_ADVISOR.md  PAPER_MODEL_RACE.md  SYNTHETIC_EDGE_CASES.md  extension_schema.sql  klax_current_deviations.md  klax_current_p1_report.md  klax_current_p2_report.md  klax_current_p3_report.md  (+18 more)
(+415 files in other folders)
