[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-weather"
version = "0.1.0"
description = "Paper-trading research system for Kalshi weather markets"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "responses>=0.25",
  "ruff>=0.5",
  "mypy>=1.10",
]
prod_weather = [
  "herbie-data>=2024.7.0",
  "xarray>=2024.6.0",
  "cfgrib>=0.9.14",
]
dashboard = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "jinja2>=3.1",
]

[project.scripts]
kalshi-weather = "kalshi_weather.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
